--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,3 +4,34 @@ body {
     color: #fff;
     text-align: center;
 }
+
+#player-area, #computer-area {
+    display: inline-block;
+    width: 200px;
+    height: 150px;
+    border: 0px solid #000;
+    padding: 5px;
+    margin: 25px;
+    text-align: center;
+    font-weight: 300;
+}
+
+#versus {
+    display: inline-block;
+}
+
+#display-result {
+    width: 425px;
+    text-align: center;
+    margin: auto;
+    font-size: 2em;
+}
+
+#roll-dice {
+    width: 440px;
+    padding: 0.5em;
+    font-size: 20px;
+    font-weight: 400;
+    border-radius: 4px;
+    cursor: pointer;
+}
