--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,3 +49,61 @@ body {
     border-radius: 4px;
     cursor: pointer;
 }
+
+/* ------ Media queries ------- */
+
+@media  (max-width: 770px) {
+
+    #player-area, #computer-area {
+        display: inline-block;
+        max-width: 250px;
+        height: 250px;
+        border: 1px solid #000;
+        /* padding: 5px; */
+        /* margin: 25px; */
+        text-align: center;
+        /* font-weight: 300; */
+        font-size: 2.5em;
+    }
+}
+
+@media  (max-width: 685px) {
+
+    #player-area, #computer-area {
+        display: inline-block;
+        max-width: 200px;
+        height: 200px;
+        border: 1px solid #000;
+        text-align: center;
+        /* font-weight: 300; */
+        font-size: 2em;
+    }
+}
+
+@media  (max-width: 580px) {
+
+    .game-area {
+        max-width: 80vh;
+    }
+
+    #display-area {
+        max-width: 100%;
+    }
+
+    #player-area, #computer-area {
+        display: block;
+        max-width: 150px;
+        height: 150px;
+        border: 1px solid #000;
+        /* padding: 5px; */
+        /* margin: 25px; */
+        text-align: center;
+        /* font-weight: 300; */
+        font-size: 2em;
+    }
+
+    #roll-dice {
+        max-width: 200px;
+        padding: 10px;
+    }
+}
