--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,10 +59,7 @@ body {
         max-width: 250px;
         height: 250px;
         border: 1px solid #000;
-        /* padding: 5px; */
-        /* margin: 25px; */
         text-align: center;
-        /* font-weight: 300; */
         font-size: 2.5em;
     }
 }
@@ -75,35 +72,69 @@ body {
         height: 200px;
         border: 1px solid #000;
         text-align: center;
-        /* font-weight: 300; */
         font-size: 2em;
     }
 }
 
-@media  (max-width: 580px) {
+@media  (max-width: 582px) {
 
-    .game-area {
-        max-width: 80vh;
+    #versus {
+        display: inline-block;
+        text-align: center;
+        height: 10px;
+        font-size: 1.5em;
+        padding-bottom: 1em;
     }
 
-    #display-area {
-        max-width: 100%;
+    #player-area, #computer-area {
+        display: inline-block;
+        max-width: 170px;
+        height: 170px;
+        border: 1px solid #000;
+        text-align: center;
+        font-size: 2em;
+    }
+
+}
+
+@media  (max-width: 499px) {
+
+    .game-area {
+        height: 80vh;
+    }
+
+    #versus {
+        display: none;
+
     }
 
     #player-area, #computer-area {
         display: block;
-        max-width: 150px;
+        max-width: 280px;
         height: 150px;
         border: 1px solid #000;
-        /* padding: 5px; */
-        /* margin: 25px; */
         text-align: center;
-        /* font-weight: 300; */
-        font-size: 2em;
-    }
+        font-size: 1.5sem;
+    } 
 
     #roll-dice {
+        width: 250px; 
+    }
+}
+
+
+@media  (max-width: 350px) {
+
+    #player-area, #computer-area {
+        display: block;
         max-width: 200px;
-        padding: 10px;
+    } 
+
+    #roll-dice {
+        width: 250px; 
+    }
+
+    #display-text {
+        font-size: 1em;
     }
 }
